--- a/chat-ui/src/CallToActionInput.module.css
+++ b/chat-ui/src/CallToActionInput.module.css
@@ -1,20 +1,13 @@
 .cta_container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: start;
-  /* justify-content: center; */
   height: 100%;
   width: 100%;
   max-width: 700px;
   gap: 12px;
 
-  border-top-left-radius: 6px;
-
-  /* Undo @leafygreen-ui/card styles for unfocused state */
-  padding: 0;
-  margin: 0;
-  box-shadow: none;
-  border: none;
+  border-top-left-radius: 6px; */
 }
 
 .cta_disclosure {
@@ -25,4 +18,55 @@
 
 .modal_content {
   margin-top: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  height: 100%;
+  width: 100%;
+  max-width: 700px;
+  gap: 12px;
+  border-top-left-radius: 6px;
+
+  transition: all 0.25s ease;
+  position: relative;
+}
+
+.card.s-unfocused {
+  /* Undo @leafygreen-ui/card styles for unfocused state */
+  padding: 0;
+  margin: 0;
+  box-shadow: none;
+  border: none;
+  min-height: 0;
+  width: calc(100% - 32px);
+}
+
+.card.s-focused {
+  position: absolute;
+  left: 16px;
+  top: 16px;
+  width: 200%;
+  border-top-left-radius: 6px;
+}
+
+.card.s-entering {
+}
+
+.card.s-exiting {
+}
+
+.card.s-entered {
+  width: 200%;
+}
+
+.card.redbg {
+  background: red;
+}
+
+.input {
+  transition: all 0.5s ease;
+  position: relative;
 }
