--- a/chat-ui/src/Chat.module.css
+++ b/chat-ui/src/Chat.module.css
@@ -1,9 +1,3 @@
-.chat {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .message_list {
   display: flex;
   flex-direction: column;
@@ -11,6 +5,7 @@
   overflow-y: scroll;
   gap: 1rem;
   margin-top: 1rem;
+  width: 100%;
 }
 
 /* width */
