--- a/chat-ui/src/SuggestedPrompts.module.css
+++ b/chat-ui/src/SuggestedPrompts.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .prompts_container_header {
@@ -10,4 +10,14 @@
   flex-direction: row;
   gap: 0.5rem;
   align-items: left;
+}
+
+.prompt {
+  padding: 0.25rem 0.5rem;
+  border-radius: 6px;
+}
+
+.prompt:hover {
+  cursor: pointer;
+  background: #e1f7ff;
 }
