--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -107,3 +107,9 @@
   transition: all 0.5s ease;
   position: relative;
 }
+
+.awaiting_response_loader {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
