--- a/chat-ui/src/Message.module.css
+++ b/chat-ui/src/Message.module.css
@@ -31,7 +31,7 @@
 }
 
 .message_text {
-  padding: 8px 24px 0px 24px;
+  padding: 0.5rem 0.5rem 0px 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 4px;
