--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -17,13 +17,16 @@
 }
 
 .lg_banner {
-  width: calc(100% - 32px); /* 32px is the padding on the <Banner> component */
+  /* 32px == padding on the LeafyGreen <Banner> component */
+  width: calc(100% - 32px);
 }
 
 .chatbot_container {
+  position: absolute;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 0.5rem;
+  width: 100%;
 }
 
 .chat {
@@ -48,74 +51,55 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  height: 100%;
   width: 100%;
   max-width: 700px;
   gap: 12px;
-  border-top-left-radius: 6px;
   padding-top: 1rem;
-
   transition: all 0.25s ease;
   position: relative;
-
   padding: 0;
-  /* width: 90%; */
-
-  border-radius: 24px;
   border-top-left-radius: 6px;
   box-shadow: none;
   background: transparent;
 }
 
 .card-enter {
-  /* opacity: 0; */
   padding: 24px;
-  /* width: calc(100% - 48px); */
   box-shadow: 0 4px 10px -4px rgba(0, 30, 43, 0.3);
   background: white;
+  border-radius: 24px;
+  border-top-left-radius: 6px;
 }
 
 .card-enter-active {
   opacity: 1;
   transition: all 250ms ease;
-  /* width: 120%; */
-
-  /* position: absolute; */
-  /* left: 16px; */
-  /* top: 16px; */
-  /* width: 200%; */
-  border-top-left-radius: 6px;
-  /* background: red; */
   box-shadow: 0 4px 10px -4px rgba(0, 30, 43, 0.3);
   background: white;
+  border-radius: 24px;
+  border-top-left-radius: 6px;
 
   /* This simulates padding in <Box /> to make it more like <Card /> */
-  /* When/if you can fix the <Card /> ref issue you can delete this.*/
+  /* When/if you can fix the <Card /> ref issue you can delete this. */
   padding: 24px;
 }
 
 .card-exit {
-  padding: 0 0 24px 0px;
+  border-top-left-radius: 6px;
 }
 
 .card-exit-active {
+  transition: all 100ms ease;
+  border-radius: 6px;
+
   /* Undo @leafygreen-ui/card styles for unfocused state */
   padding: 0;
   margin: 0;
   box-shadow: none;
-  border: none;
-  min-height: 0;
-
-  transition: all 100ms ease;
 }
-
-/* .card.s-entered {
-  width: 200%;
-} */
 
 .input {
   transition: all 0.5s ease;
-  position: relative;
 }
 
 .awaiting_response_loader {
