failed message handling

--- a/chat-ui/src/Message.module.css
+++ b/chat-ui/src/Message.module.css
@@ -21,6 +21,10 @@
   background: black;
 }
 
+.message_avatar_system {
+  background: black;
+}
+
 .message_avatar_icon_container {
   padding-top: 6px;
 }
