--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -22,11 +22,10 @@
 }
 
 .chatbot_container {
-  position: absolute;
+  /* position: absolute; */
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 100%;
 }
 
 .chat {
@@ -51,8 +50,6 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  width: 100%;
-  max-width: 700px;
   gap: 12px;
   padding-top: 1rem;
   transition: all 0.25s ease;
@@ -61,6 +58,7 @@
   border-top-left-radius: 6px;
   box-shadow: none;
   background: transparent;
+  max-width: 850px;
 }
 
 .card-enter {
@@ -69,6 +67,8 @@
   background: white;
   border-radius: 24px;
   border-top-left-radius: 6px;
+
+  width: 100%;
 }
 
 .card-enter-active {
@@ -78,6 +78,8 @@
   background: white;
   border-radius: 24px;
   border-top-left-radius: 6px;
+
+  width: 100%;
 
   /* This simulates padding in <Box /> to make it more like <Card /> */
   /* When/if you can fix the <Card /> ref issue you can delete this. */
