--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -113,7 +113,6 @@
   justify-content: center;
 }
 
-/* @media screen and (min-width: var(--breakpoint-medium)) { */
 @media screen and (min-width: 768px) {
   .card-enter {
     width: 100%;
@@ -123,7 +122,6 @@
   }
 }
 
-/* @media screen and (max-width: var(--breakpoint-medium)) and (min-width: var(--breakpoint-small)) { */
 @media screen and (max-width: 767px) {
   .chatbot_container {
     position: absolute;
@@ -133,8 +131,14 @@
     left: 0;
     box-sizing: border-box;
     padding: 1rem;
+  }
+  .chatbot_container-enter {
     background: #ffffff80;
   }
+  .chatbot_container-enter-active {
+    background: #ffffff80;
+  }
+
   .card {
     position: relative;
     box-sizing: border-box;
