--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -23,6 +23,13 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-top: 1rem;
+}
+
+.conversation_id_info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .title_bar {
@@ -51,7 +58,7 @@
 .message_feed {
   width: calc(100% + 64px);
   margin-left: -32px;
-
+  margin-bottom: -1rem; /* This is to offset the .chat_input margin-top */
 }
 
 .message_feed > div {
@@ -61,6 +68,10 @@
 
 .message div {
   white-space: normal;
+}
+
+.message_rating {
+  margin-top: 1rem;
 }
 
 .loading_skeleton {
