(DOCSP-31154) [UI] Handle timeout & "conversation too long" errors

--- a/chat-ui/src/Chatbot.module.css
+++ b/chat-ui/src/Chatbot.module.css
@@ -63,7 +63,8 @@
 
 .message_feed > div {
   box-sizing: border-box;
-  height: 60vh;
+  min-height: 20rem;
+  max-height: 60vh;
 }
 
 .message div {
