--- a/chat-ui/src/App.module.css
+++ b/chat-ui/src/App.module.css
@@ -8,8 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  /* background: #001e2b; */
-  background: #2a003c;
+  background: #001e2b;
   padding: 20px;
   height: 100vh;
 }
