--- a/chat-ui/src/App.module.css
+++ b/chat-ui/src/App.module.css
@@ -19,7 +19,16 @@ body {
 }
 
 .background_dark {
+  /* palette.black */
   background: #001e2b;
+}
+
+.controls_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  max-width: 450px;
 }
 
 .main_content {
@@ -33,4 +42,5 @@ body {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: 100%;
 }
