(EAI-576) [UI] Add React Testing Library + tests
tests run again

skip bad tests

--- a/packages/mongodb-chatbot-ui/src/App.module.css
+++ b/packages/mongodb-chatbot-ui/src/App.module.css
@@ -16,11 +16,19 @@ body {
 .background_light {
   /* palette.gray.light3 */
   background: #f9fbfa;
+
+  & h1 {
+    color: #001e2b;
+  }
 }
 
 .background_dark {
   /* palette.black */
   background: #001e2b;
+
+  & h1 {
+    color: #f9fbfa;
+  }
 }
 
 .controls_container {
